# Renderer

./: CMakeLists.txt  README.md  main.cpp
camera/: camera.cpp  camera.h
debug/: debug.cpp  debug.h
glad/: glad.c
glfw/docs/: Doxyfile.in  extra.scss
glfw/docs/html/: doxygen.css
glfw/src/: cocoa_init.m  cocoa_window.m  init.c  input.c  wl_window.c  x11_init.c
glfw/tests/: triangle-vulkan.c
imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp
include/: imgui.h
include/glm/detail/: func_common_simd.inl
include/glm/ext/: matrix_clip_space.inl  scalar_ulp.inl
include/glm/gtx/: matrix_decompose.inl  vector_angle.inl
include/glm/simd/: common.h
input/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
loader/: loader.cpp  loader.h
rendering/shaders/: fragment.glsl  shaders.h
rendering/textures/: textures.cpp  textures.h
rendering/vao/: vao.cpp  vao.h
rendering/vbo/: vbo.cpp  vbo.h
shaders/: fragment.glsl  shaders.cpp  vertex.glsl
textures/: brick.c  granite.c  image.h  stb_image.h  textures.cpp
window/: window.cpp  window.h
